# Luos_GATT

./: .gitmodules  Dockerfile  README.md  build.sh  flash.sh
actuator_node/: CMakeLists.txt  main.c  sdk_config.h
gate_node/: CMakeLists.txt  main.c  sdk_config.h
resources/services/ptp/client/: ptp_client.c  ptp_client.h
resources/services/ptp/common/: ptp_service.c  ptp_service.h
resources/services/ptp/server/: ptp_server.c  ptp_server.h
resources/utils/msg_queue/: msg_queue.c  msg_queue.h
resources/utils/uart/: uart_helpers.c  uart_helpers.h
tests/msg_queue/: CMakeLists.txt  main.c
tests/ptp_client/: CMakeLists.txt  main.c  sdk_config.h
tests/ptp_server/: CMakeLists.txt  main.c
tests/systick/: CMakeLists.txt  main.c
tests/uart/: CMakeLists.txt  main.c  sdk_config.h
